# m3docrag

./: .gitignore  =2.0.0  README.md  pyproject.toml  run_embed.sh  run_index.sh  run_rag.sh
examples/: run_indexing_m3docvqa.py  run_page_embedding.py  run_rag_m3docvqa.py
m3docvqa/: .gitignore  README.md  main.py  pyproject.toml
m3docvqa/src/m3docvqa/: downloader.py  mmqa_downloader.py  pdf_utils.py  split_utils.py  wiki_mapper.py
m3docvqa/tests/: test_downloader.py  test_pdf_utils.py  test_split_utils.py
src/m3docrag/: __init__.py
src/m3docrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/m3docrag/datasets/m3_docvqa/: __init__.py  common_utils.py  dataset.py  evaluate.py
src/m3docrag/rag/: __init__.py  base.py  multimodal.py  utils.py
src/m3docrag/retrieval/: __init__.py  colpali.py
src/m3docrag/utils/: args.py  create_folders.py  distributed.py  paths.py  pdfs.py  prompts.py  tar.py
src/m3docrag/vqa/: __init__.py  florence2.py  idefics2.py  idefics3.py  internvl2.py  qwen2.py
